--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -49,8 +49,8 @@ verbose_file_reads = "warn"
 # This profile optimizes for runtime performance and small binary size at the expense of longer build times.
 # Compared to default release profile, this profile reduced binary size from 29MB to 21MB
 # and increased build time (with only one line change in code) from 12 seconds to 133 seconds (tested on Mac M2 Max).
-[profile.release]
-lto = "fat"
+# [profile.release]
+# lto = "fat"
 
 # This profile optimizes for short build times at the expense of larger binary size and slower runtime performance.
 # If you have to rebuild image often, in Dockerfile you may replace `--release` passed to cargo command with `--profile quick-release`
@@ -75,9 +75,9 @@ numaflow-kafka = { path = "extns/numaflow-kafka" }
 numaflow-sqs = { path = "extns/numaflow-sqs" }
 numaflow-http = { path = "extns/numaflow-http" }
 numaflow-throttling = { path = "numaflow-throttling" }
-tokio = { version = "1.46.0", features = ["macros", "rt-multi-thread", "time"] }
+tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "time"] }
 tokio-stream = "0.1.17"
-tokio-util = "0.7.15"
+tokio-util = { version = "0.7", features = ["rt"] }
 bytes = "1.9.0"
 tracing = "0.1.41"
 async-nats = "0.44.2"
