chore: refactor map component (#3132)
Signed-off-by: Yashash <yashashhl25@gmail.com>
Signed-off-by: Vigith Maurice <vigith@gmail.com>
Co-authored-by: Vigith Maurice <vigith@gmail.com>

--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -75,9 +75,9 @@ numaflow-kafka = { path = "extns/numaflow-kafka" }
 numaflow-sqs = { path = "extns/numaflow-sqs" }
 numaflow-http = { path = "extns/numaflow-http" }
 numaflow-throttling = { path = "numaflow-throttling" }
-tokio = { version = "1.46.0", features = ["macros", "rt-multi-thread", "time"] }
+tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "time"] }
 tokio-stream = "0.1.17"
-tokio-util = "0.7.15"
+tokio-util = { version = "0.7", features = ["rt"] }
 bytes = "1.9.0"
 tracing = "0.1.41"
 async-nats = "0.44.2"
