Update the SendMessageTo method for sending messages to an http source in a monovertex
Signed-off-by: Vaibhav Tiwari <vaibhav.tiwari33@gmail.com>

--- a/test/monovertex-e2e/testdata/map-bypass.yaml
+++ b/test/monovertex-e2e/testdata/map-bypass.yaml
@@ -3,6 +3,8 @@ kind: MonoVertex
 metadata:
   name: map-bypass
 spec:
+  scale:
+    min: 1
   bypass:
     sink:
       tags:
@@ -20,7 +22,8 @@ spec:
         values:
           - onSuccess
   source:
-    http: {}
+    http:
+      service: true
   udf:
     container:
       image: quay.io/numaio/numaflow-rs/map-bypass-cat:stable
