--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -73,6 +73,7 @@ nav:
           - user-guide/sinks/kafka.md
           - user-guide/sinks/log.md
           - user-guide/sinks/blackhole.md
+          - user-guide/sinks/sqs.md
           - User-defined Sinks: "user-guide/sinks/user-defined-sinks.md"
           - Fallback Sink: "user-guide/sinks/fallback.md"
           - OnSuccess Sink: "user-guide/sinks/on-success.md"
