locally it works with grpcurl -vv -plaintext
Signed-off-by: Keran Yang <yangkr920208@gmail.com>

--- a/rust/numaflow-daemon/Cargo.toml
+++ b/rust/numaflow-daemon/Cargo.toml
@@ -5,7 +5,9 @@ edition = "2024"
 
 [dependencies]
 tracing.workspace = true
+tonic.workspace = true
+tokio.workspace = true
+numaflow-pb.workspace = true
 
 [lints]
 workspace = true
-
