gRPC works for both controller and server
Signed-off-by: Keran Yang <yangkr920208@gmail.com>

--- a/rust/numaflow-daemon/Cargo.toml
+++ b/rust/numaflow-daemon/Cargo.toml
@@ -8,6 +8,7 @@ tracing.workspace = true
 tonic.workspace = true
 tokio.workspace = true
 numaflow-pb.workspace = true
+rcgen.workspace = true
 
 [lints]
 workspace = true
