clean for PR review
Signed-off-by: Keran Yang <yangkr920208@gmail.com>

--- a/rust/numaflow-daemon/Cargo.toml
+++ b/rust/numaflow-daemon/Cargo.toml
@@ -9,6 +9,7 @@ tonic.workspace = true
 tokio.workspace = true
 numaflow-pb.workspace = true
 rcgen.workspace = true
+time.workspace = true
 
 [lints]
 workspace = true
