chore: support gRPC for rust mvtx daemon server (#3143)
Signed-off-by: Keran Yang <yangkr920208@gmail.com>

--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -107,7 +107,7 @@ futures = "0.3.31"
 rcgen = "0.14.1"
 chrono = "0.4.41"
 serde_json = "1.0.140"
-tonic = "0.14.2"
+tonic = { version = "0.14.2", features = ["transport", "tls-aws-lc"] }
 tonic-types = "0.14.2"
 tonic-build = "0.14.2"
 tonic-prost = "0.14.2"
@@ -123,3 +123,4 @@ prometheus-client = "0.24.0"
 pin-project = "1.1.5"
 kube = "0.99.0"
 rand = "0.9.2"
+time = "0.3.41"
