--- a/rust/numaflow-pb/Makefile
+++ b/rust/numaflow-pb/Makefile
@@ -6,13 +6,17 @@ clean:
 .PHONY: generate
 generate: clean
 	rm -rf src/clients/*.rs
+	rm -rf src/servers/*.rs
 	rm -rf src/objects/*.rs
 	cp -r ../../pkg/apis/proto proto
 	mv src/clients.rs /tmp/clients.rs.bak
+	mv src/servers.rs /tmp/servers.rs.bak
 	mv src/objects.rs /tmp/objects.rs.bak
 	> src/clients.rs
+	> src/servers.rs
 	> src/objects.rs
 	-./codegen.sh
 	mv /tmp/clients.rs.bak src/clients.rs
+	mv /tmp/servers.rs.bak src/servers.rs
 	mv /tmp/objects.rs.bak src/objects.rs
 	$(MAKE) clean
