lint(clippy): create alias for CI checks
Signed-off-by: Vigith Maurice <vigith@gmail.com>

--- a/rust/.cargo/config.toml
+++ b/rust/.cargo/config.toml
@@ -1,3 +1,11 @@
 [build]
 rustflags = ["-Dwarnings"]
 
+[alias]
+clippy-ci = [
+  "clippy",
+  "--workspace",
+  "--exclude", "numaflow-pb",
+  "--exclude", "numaflow-models",
+  "--no-deps"
+]
