lint(clippy): include all features and targets
Signed-off-by: Vigith Maurice <vigith@gmail.com>

--- a/rust/.cargo/config.toml
+++ b/rust/.cargo/config.toml
@@ -7,5 +7,7 @@ clippy-ci = [
   "--workspace",
   "--exclude", "numaflow-pb",
   "--exclude", "numaflow-models",
-  "--no-deps"
+  "--no-deps",
+  "--all-targets",
+  "--all-features"
 ]
