--- a/config/base/numaflow-server/numaflow-server-metrics-proxy-config.yaml
+++ b/config/base/numaflow-server/numaflow-server-metrics-proxy-config.yaml
@@ -29,6 +29,8 @@ data:
             - namespace
             - pipeline
             - vertex
+            # replica is added so that the pending calculation is done only for 0th replica.
+            - replica
           dimensions:
             - name: pod
               # expr: optional expression for prometheus query
