--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -50,8 +50,8 @@ verbose_file_reads = "warn"
 # This profile optimizes for runtime performance and small binary size at the expense of longer build times.
 # Compared to default release profile, this profile reduced binary size from 29MB to 21MB
 # and increased build time (with only one line change in code) from 12 seconds to 133 seconds (tested on Mac M2 Max).
-[profile.release]
-lto = "fat"
+# [profile.release]
+# lto = "fat"
 
 # This profile optimizes for short build times at the expense of larger binary size and slower runtime performance.
 # If you have to rebuild image often, in Dockerfile you may replace `--release` passed to cargo command with `--profile quick-release`
@@ -81,6 +81,7 @@ tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "time"] }
 tokio-stream = "0.1.17"
 tokio-util = { version = "0.7", features = ["rt"] }
 bytes = "1.9.0"
+http-body-util = "0.1.3"
 tracing = "0.1.41"
 async-nats = "0.44.2"
 thiserror = "2.0.12"
@@ -93,10 +94,13 @@ axum = { version = "0.8.4", default-features = false, features = [
     "tracing",
     "tokio",
 ] }
-axum-server = { version = "0.7.2", features = ["tls-rustls"] }
+axum-server = { version = "0.8.0", features = ["tls-rustls"] }
 tower = "0.5.2"
 serde = { version = "1.0.219", features = ["derive"] }
 rustls = { version = "0.23.28", features = ["aws_lc_rs"] }
+tokio-rustls = { version = "0.26.2", default-features = false, features = ["logging", "tls12"] }
+hyper = { version = "1.7.0", features = ["http1", "server"] }
+hyper-util = { version = "0.1.17", features = ["tokio"] }
 reqwest = { version = "0.12.22", default-features = false, features = [
     "http2",
     "rustls-tls",
@@ -123,4 +127,4 @@ prometheus-client = "0.24.0"
 pin-project = "1.1.5"
 kube = "0.99.0"
 rand = "0.9.2"
-time = "0.3.41"
+time = { version = "0.3.41", features = ["formatting"] }
