--- a/rust/numaflow-daemon/Cargo.toml
+++ b/rust/numaflow-daemon/Cargo.toml
@@ -13,6 +13,7 @@ time.workspace = true
 rustls.workspace = true
 
 tokio-rustls = { version = "0.26.4", default-features = false, features = ["logging", "tls12"] }
+tokio-stream = "0.1.18"
 
 
 [lints]
