no need for axum for now
Signed-off-by: Keran Yang <yangkr920208@gmail.com>

--- a/rust/numaflow-daemon/Cargo.toml
+++ b/rust/numaflow-daemon/Cargo.toml
@@ -12,12 +12,14 @@ rcgen.workspace = true
 time.workspace = true
 rustls.workspace = true
 http.workspace = true
-axum.workspace = true
+bytes.workspace = true
 
-tokio-rustls = { version = "0.26.4", default-features = false, features = ["logging", "tls12"] }
-tokio-stream = "0.1.18"
-hyper-util = "0.1.19"
+# Daemon-specific dependencies
+http-body-util = "0.1.2"
 hyper = "1.8.1"
+hyper-util = "0.1.19"
+tokio-stream = "0.1.18"
+tokio-rustls = { version = "0.26.4", default-features = false, features = ["logging", "tls12"] }
 
 [lints]
 workspace = true
