--- a/rust/numaflow-daemon/Cargo.toml
+++ b/rust/numaflow-daemon/Cargo.toml
@@ -13,13 +13,13 @@ time.workspace = true
 rustls.workspace = true
 http.workspace = true
 bytes.workspace = true
+tokio-stream.workspace = true
 
 # Daemon-specific dependencies
 http-body-util = "0.1.2"
 hyper = "1.6.0"
 hyper-util = "0.1.10"
-tokio-stream = "0.1.18"
-tokio-rustls = { version = "0.26.4", default-features = false, features = ["logging", "tls12"] }
+tokio-rustls = { version = "0.26.2", default-features = false, features = ["logging", "tls12"] }
 
 [lints]
 workspace = true
