--- a/rust/numaflow-core/Cargo.toml
+++ b/rust/numaflow-core/Cargo.toml
@@ -75,5 +75,6 @@ k8s-openapi = { version = "0.24.0", features = ["v1_32"] }
 numaflow-kafka = { workspace = true, features = ["kafka-tests-utils"] }
 numaflow-pulsar = { workspace = true, features = ["pulsar-tests-utils"] }
 serial_test = "3.3.1"
+tracing-subscriber = "0.3.20"
 
 [build-dependencies]
