--- a/rust/serving/Cargo.toml
+++ b/rust/serving/Cargo.toml
@@ -44,5 +44,5 @@ prometheus-client.workspace = true
 [dev-dependencies]
 reqwest = { workspace = true, features = ["json"] }
 rustls.workspace = true
-numaflow = { git = "https://github.com/numaproj/numaflow-rs.git", rev = "9a12a1d832d4fece830452044bd7706dc8b2a381" }
+numaflow = "0.5.0"
 tempfile = "3.20.0"
