un comment clippy checks
Signed-off-by: Vaibhav Tiwari <vaibhav.tiwari33@gmail.com>

--- a/rust/.cargo/config.toml
+++ b/rust/.cargo/config.toml
@@ -1,13 +1,13 @@
-#[build]
-#rustflags = ["-Dwarnings"]
-#
-#[alias]
-#clippy-ci = [
-#  "clippy",
-#  "--workspace",
-#  "--exclude", "numaflow-pb",
-#  "--exclude", "numaflow-models",
-#  "--no-deps",
-#  "--all-targets",
-#  "--all-features"
-#]
+[build]
+rustflags = ["-Dwarnings"]
+
+[alias]
+clippy-ci = [
+  "clippy",
+  "--workspace",
+  "--exclude", "numaflow-pb",
+  "--exclude", "numaflow-models",
+  "--no-deps",
+  "--all-targets",
+  "--all-features"
+]
