--- a/rust/numaflow-daemon/Cargo.toml
+++ b/rust/numaflow-daemon/Cargo.toml
@@ -14,6 +14,7 @@ rustls.workspace = true
 http.workspace = true
 bytes.workspace = true
 tokio-stream.workspace = true
+tokio-util.workspace = true
 
 # Daemon-specific dependencies
 http-body-util = "0.1.2"
