--- a/config/base/controller-manager/controller-manager-deployment.yaml
+++ b/config/base/controller-manager/controller-manager-deployment.yaml
@@ -69,6 +69,8 @@ spec:
                   name: numaflow-cmd-params-config
                   key: controller.leader.election.lease.renew.period
                   optional: true
+            - name: NUMAFLOW_DEBUG
+              value: "true"
           volumeMounts:
             - mountPath: /etc/numaflow
               name: controller-config-volume
