--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -10,6 +10,7 @@ members = [
     "numaflow-daemon",
     "numaflow-shared",
     "numaflow-throttling",
+    "numaflow-testing",
     # extensions
     "extns/numaflow-pulsar",
     "extns/numaflow-sqs",
