--- a/rust/numaflow-core/Cargo.toml
+++ b/rust/numaflow-core/Cargo.toml
@@ -62,6 +62,7 @@ lz4 = "1.28.1"
 async-trait = "0.1.88"
 
 [dev-dependencies]
+numaflow-testing = { path = "../numaflow-testing" }
 tempfile = "3.11.0"
 # TODO: Remove this when OnSuccess sink support is added in numaflow-rs SDK
 numaflow = "0.5.0"
