chore: make cargo clippy-ci fail on warnings
Signed-off-by: Vigith Maurice <vigith@gmail.com>

--- a/rust/.cargo/config.toml
+++ b/rust/.cargo/config.toml
@@ -6,5 +6,7 @@ clippy-ci = [
   "--exclude", "numaflow-models",
   "--no-deps",
   "--all-targets",
-  "--all-features"
+  "--all-features",
+  "--",
+  "-D", "warnings"
 ]
