--- a/rust/numaflow-daemon/Cargo.toml
+++ b/rust/numaflow-daemon/Cargo.toml
@@ -15,6 +15,7 @@ thiserror.workspace = true
 tower.workspace = true
 axum.workspace = true
 axum-server.workspace = true
+rustls.workspace = true
 bytes.workspace = true
 http.workspace = true
 serde.workspace = true
