refactor: add KV trait
Signed-off-by: Vigith Maurice <vigith@gmail.com>

--- a/rust/numaflow-shared/Cargo.toml
+++ b/rust/numaflow-shared/Cargo.toml
@@ -12,6 +12,8 @@ serde_json.workspace = true
 async-nats.workspace = true
 backoff.workspace = true
 futures.workspace = true
+bytes.workspace = true
+async-trait = "0.1.88"
 pep440_rs = "0.7.3"
 semver = "1.0.26"
 thiserror.workspace = true
