--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -34,7 +34,7 @@ dbg_macro = "deny"
 todo = "deny"
 # We should probably enable it in the future
 # future_not_send = "deny"
-empty_enum = "warn"
+empty_enums = "warn"
 exit = "warn"
 filter_map_next = "warn"
 fn_params_excessive_bools = "warn"
