--- a/rust/numaflow-daemon/Cargo.toml
+++ b/rust/numaflow-daemon/Cargo.toml
@@ -16,10 +16,12 @@ tower.workspace = true
 axum.workspace = true
 axum-server.workspace = true
 rustls.workspace = true
+rustls-pemfile = "2.2"
 bytes.workspace = true
 http.workspace = true
 serde.workspace = true
 serde_json.workspace = true
+chrono.workspace = true
 hyper = "1.6.0"
 http-body-util = "0.1"
 
