feat: a simple Key/Value store with impl KVStore trait
Signed-off-by: Vigith Maurice <vigith@gmail.com>

--- a/rust/numaflow-testing/Cargo.toml
+++ b/rust/numaflow-testing/Cargo.toml
@@ -9,6 +9,9 @@ bytes.workspace = true
 chrono.workspace = true
 thiserror.workspace = true
 parking_lot.workspace = true
+async-trait = "0.1.88"
+futures.workspace = true
+numaflow-shared = { path = "../numaflow-shared" }
 
 [lints]
 workspace = true
