--- a/rust/numaflow-daemon/Cargo.toml
+++ b/rust/numaflow-daemon/Cargo.toml
@@ -16,7 +16,7 @@ tower.workspace = true
 axum.workspace = true
 axum-server.workspace = true
 rustls.workspace = true
-rustls-pemfile = "2.2"
+rustls-pki-types = "1.11"
 bytes.workspace = true
 http.workspace = true
 serde.workspace = true
