chore: parse daemon responses properly (#3260)

--- a/rust/numaflow-daemon/Cargo.toml
+++ b/rust/numaflow-daemon/Cargo.toml
@@ -20,8 +20,11 @@ bytes.workspace = true
 http.workspace = true
 serde.workspace = true
 serde_json.workspace = true
+chrono.workspace = true
+prost-types.workspace = true
 hyper = "1.6.0"
 http-body-util = "0.1"
+rustls-pki-types = "1.11"
 
 [lints]
 workspace = true
