--- a/config/base/crds/full/numaflow.numaproj.io_pipelines.yaml
+++ b/config/base/crds/full/numaflow.numaproj.io_pipelines.yaml
@@ -388,6 +388,12 @@ spec:
                     default: 1s
                     type: string
                 type: object
+              ordered:
+                properties:
+                  enabled:
+                    default: false
+                    type: boolean
+                type: object
               sideInputs:
                 items:
                   properties:
@@ -7483,6 +7489,12 @@ spec:
                     nodeSelector:
                       additionalProperties:
                         type: string
+                      type: object
+                    ordered:
+                      properties:
+                        enabled:
+                          default: false
+                          type: boolean
                       type: object
                     partitions:
                       format: int32
