--- a/config/namespace-install.yaml
+++ b/config/namespace-install.yaml
@@ -10159,6 +10159,12 @@ spec:
                     default: 1s
                     type: string
                 type: object
+              ordered:
+                properties:
+                  enabled:
+                    default: false
+                    type: boolean
+                type: object
               sideInputs:
                 items:
                   properties:
@@ -17255,6 +17261,12 @@ spec:
                       additionalProperties:
                         type: string
                       type: object
+                    ordered:
+                      properties:
+                        enabled:
+                          default: false
+                          type: boolean
+                      type: object
                     partitions:
                       format: int32
                       type: integer
@@ -23263,6 +23275,12 @@ spec:
                       readTimeout:
                         default: 1s
                         type: string
+                    type: object
+                  ordered:
+                    properties:
+                      enabled:
+                        default: false
+                        type: boolean
                     type: object
                   sideInputs:
                     items:
@@ -30359,6 +30377,12 @@ spec:
                         nodeSelector:
                           additionalProperties:
                             type: string
+                          type: object
+                        ordered:
+                          properties:
+                            enabled:
+                              default: false
+                              type: boolean
                           type: object
                         partitions:
                           format: int32
@@ -39657,6 +39681,12 @@ spec:
               nodeSelector:
                 additionalProperties:
                   type: string
+                type: object
+              ordered:
+                properties:
+                  enabled:
+                    default: false
+                    type: boolean
                 type: object
               partitions:
                 format: int32
